--- a/pomodoro/Base.lproj/Main.storyboard
+++ b/pomodoro/Base.lproj/Main.storyboard
@@ -41,11 +41,17 @@
                                         <rect key="frame" x="0.0" y="0.0" width="131" height="31"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="취소"/>
+                                        <connections>
+                                            <action selector="tapCancelButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bM0-EM-Xu5"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tW9-SB-1Ca">
                                         <rect key="frame" x="211" y="0.0" width="131" height="31"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="시작"/>
+                                        <connections>
+                                            <action selector="tapToggleButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rSb-YY-6OJ"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -70,6 +76,13 @@
                             <constraint firstItem="eVb-OI-BhP" firstAttribute="top" secondItem="xWI-ah-OV7" secondAttribute="bottom" constant="30" id="uC3-aV-bAX"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cancelButton" destination="NSL-we-Bvh" id="7Px-Yi-WrF"/>
+                        <outlet property="datePicker" destination="nzh-pC-OfI" id="pHb-u8-7T1"/>
+                        <outlet property="progressView" destination="eVb-OI-BhP" id="e8p-cR-zT0"/>
+                        <outlet property="timerLabel" destination="xWI-ah-OV7" id="nFa-hN-5do"/>
+                        <outlet property="toggleButton" destination="tW9-SB-1Ca" id="d7f-CK-YSc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
